# snap7-rs

./: Cargo.toml  README.md  build.rs
src/: client.rs  ffi.rs  lib.rs  model.rs  partner.rs  server.rs
src/utils/: getters.rs  setters.rs
