[package]
name = "snap7-rs"
version = "1.142.0"
authors = ["gmg137 <gmg137@live.com>"]
edition = "2021"
build = "build.rs"
readme = "README.md"
keywords = ["snap7", "s7", "plc", "siemens"]
repository = "https://github.com/Green-Mod/snap7-rs.git"
homepage = "https://github.com/Green-Mod/snap7-rs.git"

[dependencies]
anyhow = "^1"

[build-dependencies]
cc = "^1"
