[package]
name = "rust-snap7"
version = "1.142.0"
authors = ["bruce <bruceunx@outlook.com>", "gmg137 <gmg137@live.com>"]
edition = "2021"
build = "build.rs"
readme = "README.md"
description = "rust bindings for snap7, similar like python-snap7"
license = "MulanPSL-2.0"
keywords = ["snap7", "s7", "plc", "siemens"]
repository = "https://github.com/bruceunx/snap7-rs"
homepage = "https://github.com/bruceunx/snap7-rs"

[dependencies]
anyhow = "^1"
chrono = "0.4.38"
regex = "1.10.5"
thiserror = "2"

[build-dependencies]
cc = "^1"
